# bot_telegram

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
src/: main.py  settings.py
src/handlers/: messages.py
tests/test_handlers/: test_messages.py
tests/test_settings/: test_settings.py
